Facebook Login_Versão final(Anim.B)
Nessa versão coloquei uma animação no botão de logar e coloquei ele para funcionar.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <br><br>
     <input type="text" placeholder="Senha" required id="senha">
     <br><br>
-    <button class="botao" onclick="logar()">Entrar</button>
+    <div class="container">
+      <button class="botao" onclick="logar()">Entrar</button>
+    </div>
   </div>
 </body>
 
